--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
-html = r"""<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="YUqkf7c7YEs8IuaoGH_YEbtAlTwlNHAr_Oj2RhOhdmE" />
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Mithun Multi-Tool App</title>
