--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-adsense-account" content="ca-pub-1195321182602348">
   <meta name="google-site-verification" content="YUqkf7c7YEs8IuaoGH_YEbtAlTwlNHAr_Oj2RhOhdmE" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
