--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
   <meta name="google-adsense-account" content="ca-pub-1195321182602348">
   <meta name="google-site-verification" content="YUqkf7c7YEs8IuaoGH_YEbtAlTwlNHAr_Oj2RhOhdmE" />
+
+  <meta name="description" 
+content="Mithun Tools - Home, Smart Tools, Life Tools, India Tools, Finance & Tax, Fun & Viral, Number Tools, Operations & Weather tools. 70+ free online tools made in India."/>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="70+ Free Online Tools - UPI QR, GST Invoice, Gold Rate, Live Cricket, Income Tax | Made in India by Mithun"/>
-  <title>Mithun Tools - 70+ Free Online Tools (Made in India)</title>
+  <title>multi tool web with every daily day tools</title>
 
-  <!-- Libraries -->
+  <!-- Libraries 
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.6/dist/JsBarcode.all.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mathjs@12.0.0/lib/browser/math.min.js"></script>
